<resources>
    <string name="app_name">Muzei - Wallhaven.cc</string>
    <string name="muzei_label">wallhaven.cc</string>
    <string name="muzei_description">Random wallpapers from wallhaven.cc</string>
    <string name="wallpaper_title">#%d</string>
    <string name="purity_title">Purity</string>
    <string name="board_title">Category</string>
    <string name="timespan_title">Timespan</string>
    <string name="timespan_descr">Timespan of results</string>
    <string name="search_title">Search Mode</string>
    <string name="toplist">Toplist</string>
    <string name="random">Random</string>
    <string name="othersettings_title">Other Settings</string>
    <string name="updateinterval">Refresh Interval</string>
    <string name="wifiOnly">Update on Wifi only</string>
    <string name="safe">Safe</string>
    <string name="sketchy">Sketchy</string>
    <string name="nsfw">NSFW</string>
    <string name="anime">Anime</string>
    <string name="general">General</string>
    <string name="highres">High Resolution</string>
    <string name="people">People</string>
    <string name="threeHours">Every 3 hours</string>
    <string name="sixHours">Every 6 hours</string>
    <string name="nineHours">Every 9 hours</string>
    <string name="twelveHours">Every 12 hours</string>
    <string name="day">Every day</string>
    <string name="alltime">All time</string>
    <string name="threemonths">3 months</string>
    <string name="twomonths">2 months</string>
    <string name="onemonth">1 month</string>
    <string name="twoweeks">2 weeks</string>
    <string name="oneweek">1 week</string>
    <string name="threedays">3 days</string>
    <string name="oneday">1 day</string>
</resources>
